# Szymczak_Leray

./: .gitignore  Cargo.toml  out
.github/workflows/: rust.yml
python/: benchmarker.py  hypotheses.py  launcher.py  main.py  math_utils.py  num_of_classes.py  old_plotter.py  out  out2  out23  out8  parser.py  plotter.py
results/txt/dim1/: Z10-dim-1  Z11-dim-1  Z12-dim-1  Z13-dim-1  Z14-dim-1  Z15-dim-1  Z16-dim-1  Z17-dim-1  Z18-dim-1  Z19-dim-1  Z2-dim-1  Z20-dim-1  Z21-dim-1  Z22-dim-1  Z23-dim-1  Z24-dim-1  Z25-dim-1  Z26-dim-1  Z27-dim-1  Z28-dim-1  Z3-dim-1  Z30-dim-1  Z4-dim-1  Z5-dim-1  Z6-dim-1  Z7-dim-1  Z8-dim-1  Z9-dim-1
results/txt/dim2/: Z2-dim-2  Z3-dim-2
src/: Parser.iypnb  \  abstract_modules.rs  benchmark  custom_traits.rs  endo_category.rs  endocategory.rs  error.rs  groups.rs  main.rs  matrix.rs  parser.py  relation.rs  rings.rs  szymczak_category.rs  temporary.rs  torsion_coeff.rs  util.rs  zn_modules.rs
src/.ipynb_checkpoints/: Parser-checkpoint.ipynb
src/category/: mod.rs  morphism.rs  mrelation.rs  object.rs  relation.rs
src/category/functors/: mod.rs  szymczak.rs
src/category/szymczak_functor/: mod.rs
src/endocategory/: map.rs  morphism.rs  relation.rs  torsion_coeff.rs  z_module.rs
src/ralg/: cgroup.rs  matrix.rs  mod.rs  ring.rs
src/ralg/cgroup/: ideal.rs  mod.rs
src/rmodule/: canon.rs  direct.rs  map.rs  mod.rs  product.rs  quotient.rs  ring.rs  torsion.rs
src/util/: bitmatrix.rs  category_of_relations.rs  iterator.rs  matrix.rs  mod.rs  number.rs
src/zmodule/: canon.rs  coset.rs  map.rs  mod.rs
(+10 files in other folders)
