[package]
name = "szymczak_leray"
version = "0.1.0"
edition = "2021"

[package.metadata.incomplete]
torsion_coeff.rs = ["unused_variables", "dead_code"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.7.0"
bitvector = "0.1.5"
itertools = "0.11"
gcd = "2.3"
